--- a/First_ML.ipynb
+++ b/First_ML.ipynb
@@ -11,15 +11,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ## Text revizuit pentru disertație (în format IPynb):\n",
+    "## Text revizuit pentru disertație (în format IPynb):\n",
     "\n",
-    "## ## Tema Disertației\n",
+    "## Tema Disertației\n",
     "\n",
     "**Dezvoltarea unui Model de Predicție a Proprietăților Sticlei Utilizând Machine Learning**\n",
     "\n",
     "Disertația mea se concentrează pe crearea unui model robust de predicție a proprietăților sticlei, cum ar fi densitatea, indicele de refracție și temperatura de tranziție vitroasă (Tg), utilizând tehnici de Machine Learning (ML). Obiectivul principal este de a facilita optimizarea proceselor de producție a sticlei și descoperirea de noi materiale cu proprietăți specifice.\n",
     "\n",
-    "## ## Motivație\n",
+    "## Motivație\n",
     "\n",
     "Sticla joacă un rol crucial în diverse domenii, de la optică și electronică la construcții și industria alimentară. Proprietățile sale fizice și chimice, precum densitatea, indicele de refracție și Tg, influențează semnificativ performanța și aplicațiile sale. Cu toate acestea, prezicerea cu precizie a proprietăților sticlei poate fi o sarcină complexă, datorită relațiilor non-liniare dintre compoziția materiei prime, tratamentul termic aplicat și proprietățile rezultate.\n",
     "\n",
@@ -28,11 +28,11 @@
     "* \"Dezvoltarea de materiale noi și îmbunătățite este esențială pentru progresul tehnologic în diverse domenii.\" - (Introduceți o sursă relevantă)\n",
     "* \"Predicția precisă a proprietăților sticlei poate contribui la optimizarea producției, reducerea costurilor și îmbunătățirea calității.\" - (Introduceți o sursă relevantă)\n",
     "\n",
-    "## ## Metodologie\n",
+    "## Metodologie\n",
     "\n",
     "Pentru a atinge obiectivul propus, voi urma o metodologie riguroasă care cuprinde următoarele etape:\n",
     "\n",
-    "### ## 1. Colectarea Datelor\n",
+    "### 1. Colectarea Datelor\n",
     "\n",
     "**Obiectiv:** Reuniți un set de date cuprinzător și de înaltă calitate care să reflecte diversitatea compozițiilor și tratamentelor termice ale sticlei.\n",
     "\n",
@@ -48,7 +48,7 @@
     "* Parametrii de tratament termic (temperatură, durată, atmosferă)\n",
     "* Proprietățile sticlei (densitate, indice de refracție, Tg, alte proprietăți relevante)\n",
     "\n",
-    "### ## 2. Preprocesarea Datelor\n",
+    "### 2. Preprocesarea Datelor\n",
     "\n",
     "**Obiectiv:** Pregătirea datelor pentru a le face compatibile cu modelele ML și a asigura acuratețea și consistența lor.\n",
     "\n",
@@ -59,7 +59,7 @@
     "* Normalizarea datelor pentru a le asigura o scară comparabilă\n",
     "* Transformarea datelor categorice (ex: tipuri de oxizi)\n",
     "\n",
-    "### ## 3. Dezvoltarea Modelului ML\n",
+    "### 3. Dezvoltarea Modelului ML\n",
     "\n",
     "**Obiectiv:** Selectarea și optimizarea unui model ML performant care să poată prezice cu precizie proprietățile sticlei.\n",
     "\n",
@@ -74,7 +74,7 @@
     "* Interpretabilitate pentru a înțelege factorii care influențează proprietățile sticlei\n",
     "* Generalizare la noi compoziții și tratamente termice\n",
     "\n",
-    "### ## 4. Evaluarea Modelului\n",
+    "### 4. Evaluarea Modelului\n",
     "\n",
     "**Obiectiv:** Asigurarea validității și fiabilității modelului ML prin evaluare obiectivă.\n",
     "\n",
@@ -87,7 +87,7 @@
     "* Root Mean Squared Error (RMSE)\n",
     "* Alte metrici specifice domeniului sticlei\n",
     "\n",
-    "### ## 5. Interpretarea Modelului\n",
+    "### 5. Interpretarea Modelului\n",
     "\n",
     "**Obiectiv:** Înțelegerea modului în care modelul ML face predicții și identificarea factorilor cheie care influențează proprietățile sticlei.\n",
     "\n",
@@ -96,7 +96,7 @@
     "* Vizualizarea importanței caracteristicilor\n",
     "* Analiza sensibilității \n",
     "\n",
-    "### ## **Rezultate**\n",
+    "### **Rezultate**\n",
     "\n",
     "Până în prezent:\n",
     "\n",
